# ChangeLog for www-apps/twiki
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/www-apps/cvs-repo/gentoo-x86/www-apps/twiki/Attic/ChangeLog,v 1.9 2005/03/01 15:45:24 beu Exp $

  01 Mar 2005; Elfyn McBratney <beu@gentoo.org> twiki-20030201.ebuild,
  twiki-20040901.ebuild, twiki-20040902-r1.ebuild, twiki-20040902.ebuild:
  Fix einfo's.

*twiki-20040902-r1 (01 Mar 2005)

  01 Mar 2005; Elfyn McBratney <beu@gentoo.org> +twiki-20040902-r1.ebuild:
  Rev bump.  Update to use the new apache paths.

  06 Nov 2004; Joseph Jezak <josejx@gentoo.org> twiki-20040902.ebuild:
  Marked stable on ppc for bug #71305

*twiki-20040902 (22 Nov 2004)

  22 Nov 2004; Rob Holland <tigger@gentoo.org> +twiki-20040902.ebuild:
  Version bump again as last version was still vulnerable.

*twiki-20040901 (22 Nov 2004)

  22 Nov 2004; Rob Holland <tigger@gentoo.org> +twiki-20040901.ebuild:
  Version bump to fix #71035.

  28 Sep 2004; Sven Wegener <swegener@gentoo.org>
  .#twiki-20030201.ebuild.1.4, .#twiki-20030201.ebuild.1.6:
  Gentoo Technologies, Inc. -> Gentoo Foundation

  05 Sep 2004; Sven Wegener <swegener@gentoo.org> :
  Fixed ChangeLog header.

  03 Sep 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  twiki-20030201.ebuild:
  Masked twiki-20030201.ebuild stable for ppc

*twiki-20030201 (15 Aug 2004)

  15 Aug 2004; Stuart Herbert <stuart@gentoo.org>
  +.#twiki-20030201.ebuild.1.4, +.#twiki-20030201.ebuild.1.6,
  +.#twiki-20030201.ebuild.1.8, +metadata.xml, +files/twiki.conf,
  +twiki-20030201.ebuild:
  Moved from net-www/twiki to www-apps/twiki.

  25 Jun 2004; Aron Griffis <agriffis@gentoo.org> twiki-20030201.ebuild:
  QA - fix use invocation

  02 Jun 2004; Martin Holzer <mholzer@gentoo.org> twiki-20030201.ebuild:
  adding S

  10 Mar 2004; Martin Holzer <mholzer@gentoo.org> twiki-20030201.ebuild:
  fixing verbose. closes 44083

  23 Jan 2004; Martin Holzer <mholzer@gentoo.org> twiki-20030201.ebuild,