@@ -1,21 +1,21 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 da070891e554369c8645d6ce1bedaf05 twiki-20040902-r1.ebuild 1657
+MD5 cfe1e57612885c294f2a677dce39238c twiki-20040902.ebuild 1749
 MD5 c339473e0ff43da76eb2f2607c441921 metadata.xml 280
-MD5 30b8858463fd093c60aa439508a4d215 twiki-20040901.ebuild 1753
-MD5 e1cd3b2c447f9c69906e27a8f4a07da3 twiki-20040902.ebuild 1752
-MD5 f560b93016506ef31f2d468974732f73 ChangeLog 2149
-MD5 e8bb54ea8d96ce89531dad732376c92a twiki-20030201.ebuild 1736
+MD5 e0bb1bb508280bfd2699ed7d8bb5dda7 ChangeLog 2350
+MD5 1f88a38b9c8c76d83e7823a6f9047392 twiki-20040902-r1.ebuild 1654
+MD5 82fab81b3bd6a7d0e5bb47240179dd93 twiki-20040901.ebuild 1750
+MD5 a3b9ed6f1eb7a992d52d92822bd225a6 twiki-20030201.ebuild 1733
+MD5 482053b76eef263c5377921e1dedcf08 files/digest-twiki-20040902-r1 66
 MD5 03289224ed6b4fd47078e353bc05c650 files/digest-twiki-20030201 65
+MD5 171d54d5e23801d47b006999d95f0c75 files/digest-twiki-20040901 66
 MD5 482053b76eef263c5377921e1dedcf08 files/digest-twiki-20040902 66
 MD5 6c6c056f184e8d333ae577837290e282 files/twiki.conf 538
-MD5 482053b76eef263c5377921e1dedcf08 files/digest-twiki-20040902-r1 66
-MD5 171d54d5e23801d47b006999d95f0c75 files/digest-twiki-20040901 66
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.2.6 (GNU/Linux)
+Version: GnuPG v1.4.1 (GNU/Linux)
 
-iD8DBQFCJI4pjUHll2nfF60RAqmBAKCCmWtRsSXGIz+VVrOkYpQTKss60gCeMcLT
-PMz8oEpR8RF1NS1saJK3Yds=
-=zzgG
+iD8DBQFCfOJ9jUHll2nfF60RArHvAJ0QWSlIaGzt/4oTaTnvYP1JaEMqxQCgoe1G
+lQjcbm68qjTDssLMmJQMCSQ=
+=sHRV
 -----END PGP SIGNATURE-----
