@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/www-apps/cvs-repo/gentoo-x86/www-apps/twiki/Attic/twiki-20040901.ebuild,v 1.3 2005/03/01 15:45:24 beu Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/www-apps/cvs-repo/gentoo-x86/www-apps/twiki/Attic/twiki-20040901.ebuild,v 1.4 2005/05/07 15:44:10 beu Exp $
 
 inherit webapp-apache
 
@@ -8,7 +8,7 @@ DESCRIPTION="A Web Based Collaboration Platform"
 HOMEPAGE="http://twiki.org/"
 SRC_URI="http://twiki.org/swd/TWiki${PV}.tar.gz"
 
-LICENSE="LGPL-2.1"
+LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~x86 ~ppc"
 
